sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:10: error: ')' expected but ';' found.
   {echange(i;i+1);g=true}}
             ^AlgCocktailSort2:10: error: ';' expected but ')' found.
   {echange(i;i+1);g=true}}
                 ^AlgCocktailSort2:13: error: '(' expected but identifier found.
  {if plusPetit(i+1,i)
      ^